# wargames

./: .env.example  .gitignore  LICENSE  README.md  SECURITY.md  range.config.example.json
command-center/: Cargo.toml  server.js
command-center/public/: index.html
command-center/src/: main.rs  setup.rs
wargame/: Cargo.toml  DESIGN-BRIEF.md  WARGAME.md
wargame/docs/superpowers/plans/: 2026-07-10-arsenal-as-data.md  2026-07-10-arsenal-primitives.md  2026-07-10-facts-as-data-v2.md  2026-07-10-facts-as-data.md  2026-07-10-node-builder.md
wargame/docs/superpowers/specs/: 2026-07-09-facts-as-data-design.md  2026-07-10-arsenal-as-data-design.md  2026-07-10-arsenal-primitives-design.md  (+1 more)
wargame/public/: build.html  canvas.html  design.html  wargame-legacy.html  wargame.html
wargame/src/: arsenal.rs  builder.rs  card.rs  cards.rs  category.rs  effects.rs  env.rs  facts.rs  graph.rs  history.rs  lib.rs  main.rs  model.rs  referee.rs  registry.rs  rules.rs  scenario.rs  session.rs  state.rs  tool.rs
wargame/tests/: arsenal_equivalence.rs  balance_note.md  compound_win.rs  precondition_equivalence.rs  taxonomy.rs
wargame/tests/fixtures/: arsenal_goldens.json
wargame/tools/: active_response.ron  asrep_roast.ron  backups.ron  block_c2.ron  block_egress.ron  bloodhound.ron  deploy_detection.ron  deploy_implant.ron  enforce_aes.ron  enforce_preauth.ron  escalate_da.ron  establish_c2.ron  evict.ron  exfil_data.ron  hunt.ron  initial_access.ron  kerberoast.ron  monitor.ron  phish.ron  pivot.ron  ransomware.ron  recon.ron  remediate_acl.ron  rotate_creds.ron  segment.ron
(+15 files in other folders)
