[package]
name = "purple-range"
version = "0.1.0"
edition = "2021"
description = "Purple Range command center — AI-driven purple-team wargame for homelabs"

[[bin]]
name = "purple-range"
path = "src/main.rs"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "io-util", "time", "net", "signal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
indexmap = { version = "2", features = ["serde"] }
async-stream = "0.3"
futures = "0.3"

[profile.release]
strip = true
lto = true
opt-level = "z"
